--- a/app/src/main/res/values-it/infos.xml
+++ b/app/src/main/res/values-it/infos.xml
@@ -8,8 +8,9 @@ Puoi premere su:\n
 ･ le icone della <u>sonda</u> o <u>bersaglio</u> per lanciare Google Maps in modalità navigazione\n
 ･ il <u>seriale della sonda</u> per mostrare la pagina <a href='https://www.radiosondy.info'>radiosondy.info</a>
 o <a href='https://tracker.sondehub.org/'>Sondehub</a> per la sonda\n
+･ la <u>distanza</u> per (dis)attivare la modalità di caccia\n
 ･ il <u>punto di atterraggio</u> (cerchio arancio) per avere indicazioni di navigazione da Google maps al punto previsto di atterraggio\n
-･ l\'icona <u>scoppio</u> per  sapere l\'ora di scoppio (previsto o passato)\n
+･ l\'icona <u>scoppio</u> per  sapere l\'ora di scoppio (previsto o passato) e i dati usati per la predizione\n
 ･ l\'icona <u>menu</u> per mostrare menù <b>e</b> coordinate della sonda\n
 ･ la <u>latitudine</u> (o longitudine) della sonda per copiare il dato negli appunti\n\n
 Premi al lungo su:\n
