--- a/app/src/main/res/values/infos.xml
+++ b/app/src/main/res/values/infos.xml
@@ -8,8 +8,9 @@ You can tap on:\n
 ･ the <u>sonde</u> or <u>target</u> icons to launch Google Maps in navigation mode\n
 ･ the <u>sonde ID</u> to show the <a href='https://www.radiosondy.info'>radiosondy.info</a>
 or <a href='https://tracker.sondehub.org/'>Sondehub</a> page for the sonde\n
+･ the <u>distance</u> for entering/exiting hunting mode\n
 ･ the <u>landing zone</u> (orange circle) to get Google maps directions to the predicted landing site\n
-･ the <u>explosion</u> icon to get the time of the (predicted or actual) burst local time\n
+･ the <u>explosion</u> icon to get the time of the (predicted or actual) burst local time and prediction data\n
 ･ the <u>menu</u> icon to show the menu <b>and</b> the sonde coordinates\n
 ･ the <u>latitude</u> (or longitude) of the sonde to copy it to the clipboard\n\n
 Long tap on:\n
@@ -28,6 +29,8 @@ Many friendly people from the
 <a href='https://freesound.org/people/EminYILDIRIM/sounds/541192/'>Balloon explosion pop</a>\n
 <a href='https://freesound.org/people/se2001/sounds/541506'>Cartoon Quick Zip</a>\n
 <a href='https://freesound.org/people/ammaro/sounds/573381'>Ding</a>\n\n
+<b><big>Images</big></b>
+        <a href="https://www.flaticon.com/free-icons/parachute" title="parachute icons">Parachute icons created by Smashicons - Flaticon</a>
 <b><big>Maps</big></b>\n
 ©<a href='http://www.openstreetmap.org/copyright'>OpenStreetMap</a> (<a href='https://opendatacommons.org/licenses/odbl/'>ODbl</a>)\n
 ©<a href='https://www.cyclosm.org/'>CyclOSM</a> (<a href='https://creativecommons.org/licenses/by-sa/2.0/'>CC-BY-SA 2.0</a>)\n
