supports MySondyGO version 3 (BLE)

--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -228,7 +228,7 @@
             android:layout_height="30dp"
             android:layout_alignParentStart="true"
             android:layout_toStartOf="@+id/dbm"
-            android:background="@drawable/ic_prog_back"
+            android:background="@drawable/s_meter"
             android:indeterminate="false"
             android:max="157"
             android:minHeight="30dp"
@@ -247,6 +247,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:text="@string/dbm"
+            android:textColor="#DDD"
             android:maxLines="1"
             android:textSize="18sp"
             android:textStyle="bold"
